--- a/OSMC/build.gradle
+++ b/OSMC/build.gradle
@@ -17,16 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'org.slf4j:slf4j-simple:1.6.1'
-    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'org.osmdroid:osmdroid-parent:4.3'
     compile 'org.osmdroid:osmdroid-android:4.3'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
-
-
 }
