--- a/OSMC/build.gradle
+++ b/OSMC/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -25,7 +26,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'org.slf4j:slf4j-simple:1.6.1'
     compile 'org.osmdroid:osmdroid-parent:4.3'
     compile 'org.osmdroid:osmdroid-android:4.3'
     compile 'com.android.support:appcompat-v7:22.2.1'
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile project(':OSMBonusPack')
+    compile project(':MapsForgeForOsmdroid')
 }
