--- a/osmbonuspack-5.3/MapsForgeForOsmdroid/build.gradle
+++ b/osmbonuspack-5.3/MapsForgeForOsmdroid/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 15
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
