--- a/osmbonuspack-5.3/OSMBonusPackTuto/build.gradle
+++ b/osmbonuspack-5.3/OSMBonusPackTuto/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 15
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -29,8 +30,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile(name:'OSMBonusPack-release', ext:'aar')
-//    compile project(":OSMBonusPack")
+    //compile(name:'OSMBonusPack-release', ext:'aar')
+    compile project(":OSMBonusPack")
 
     compile 'org.osmdroid:osmdroid-android:4.3'
     compile 'org.slf4j:slf4j-android:1.6.1-RC1'
