--- a/osmbonuspack-5.3/OSMNavigator/build.gradle
+++ b/osmbonuspack-5.3/OSMNavigator/build.gradle
@@ -20,11 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile project(":OSMBonusPack")
-    compile project(":MapsForgeForOsmdroid")
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'org.osmdroid:osmdroid-android:4.3'
     compile 'org.slf4j:slf4j-android:1.6.1-RC1'
 }
