--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':OSMC';
+include ':OSMC', ':MapsForgeForOsmdroid', ':OSMBonusPackTuto', ':OSMNavigator', ':OSMBonusPack';
+project(':MapsForgeForOsmdroid').projectDir = new File('osmbonuspack-5.3/MapsForgeForOsmdroid')
+project(':OSMBonusPackTuto').projectDir = new File('osmbonuspack-5.3/OSMBonusPackTuto')
+project(':OSMNavigator').projectDir = new File('osmbonuspack-5.3/OSMNavigator')
+project(':OSMBonusPack').projectDir = new File('osmbonuspack-5.3/OSMBonusPack')
